# server_tests

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: ArgHandler.h  ConsoleEnums.inl  ConsoleWrite.h  ServerInterface.h  TimeInterface.h  ddArgHandler.h  ddEVEmbed.h  ddServer.h
src/: ArgHandler.c  Config.h.in  ConsoleWrite.c  ServerInterface.c  TimeInterface.c  ddArgHandler.c  ddConfig.h.in  ddEVEmbed.c  ddServer.c  ddTime.c  example_01.c  example_02.c  main.c
